--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <h1>Andre M's Portfolio</h1>
 <h2>Backend Engineer Growing to Fullstack with DevOps & Cloud Skills</h2>
+
+<h3><a href="./Capstone Project I/index.html">My Resume</a></h3>
 <hr/>  
 
 
