--- a/index.html
+++ b/index.html
@@ -1,48 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andre's Portfolio</title>
+    <link></link>
 </head>
-
 <body>
+    <div class="navbar"> 
+        <ul>
+            <li> Andre Maier Verfügbar / {Changing Reference}</li>
+            <li>Education</li>
+            <li>Work Experience</li>
+            <li>Projects</li>
+            <li>Study</li>
+            <li>Others</li>
+            <li>Let's talk {Symbol}</li>
+        </ul>
+    </div>
+    <div id=""></div>
 
-<h1>Andre M's Portfolio</h1>
-<h2>Backend Engineer Growing to Fullstack with DevOps & Cloud Skills</h2>
-
-<h3><a href="./Capstone Project I/index.html">My Resume</a></h3>
-<hr/>  
-
-
-<!-- TODO: Add your experiences as working student and computer scientist student -->
-<h3><a href ="./public/working-student-experience.html">My Experiences as CS Student and Working Student</a></h3>
-<img src="assets/images/Screenshot-CSandWorkingStudent.png" height="200"/>
-
-<h3><a href ="./public/thesis-project.html">My Thesis Backend Project</a></h3>
-<img src="assets/images/Screenshot-Theis-Project.png" height="200"/>
-<h3><a href="./public/devops-project.html">My DevOps Journey</a></h3>
-<img src="assets/images/Screenshot-DevOps.png" height="200"/>
-
-
-<h3><a href="./public/becoming-fullstack.html" >My Evolution to FullStack</a></h3>
-<img src="assets/images/Screenshot-Becoming FullStack.png" height="200"/>
-
+    
 </body>
 </html>
-
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<!-- SOLVED -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
