--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 20.5C1.45 20.5 0.979167 20.3042 0.5875 19.9125C0.195833 19.5208 0 19.05 0 18.5V4.5C0 3.95 0.195833 3.47917 0.5875 3.0875C0.979167 2.69583 1.45 2.5 2 2.5H3V0.5H5V2.5H13V0.5H15V2.5H16C16.55 2.5 17.0208 2.69583 17.4125 3.0875C17.8042 3.47917 18 3.95 18 4.5V18.5C18 19.05 17.8042 19.5208 17.4125 19.9125C17.0208 20.3042 16.55 20.5 16 20.5H2ZM2 18.5H16V8.5H2V18.5ZM2 6.5H16V4.5H2V6.5ZM9 12.5C8.71667 12.5 8.47917 12.4042 8.2875 12.2125C8.09583 12.0208 8 11.7833 8 11.5C8 11.2167 8.09583 10.9792 8.2875 10.7875C8.47917 10.5958 8.71667 10.5 9 10.5C9.28333 10.5 9.52083 10.5958 9.7125 10.7875C9.90417 10.9792 10 11.2167 10 11.5C10 11.7833 9.90417 12.0208 9.7125 12.2125C9.52083 12.4042 9.28333 12.5 9 12.5ZM5 12.5C4.71667 12.5 4.47917 12.4042 4.2875 12.2125C4.09583 12.0208 4 11.7833 4 11.5C4 11.2167 4.09583 10.9792 4.2875 10.7875C4.47917 10.5958 4.71667 10.5 5 10.5C5.28333 10.5 5.52083 10.5958 5.7125 10.7875C5.90417 10.9792 6 11.2167 6 11.5C6 11.7833 5.90417 12.0208 5.7125 12.2125C5.52083 12.4042 5.28333 12.5 5 12.5ZM13 12.5C12.7167 12.5 12.4792 12.4042 12.2875 12.2125C12.0958 12.0208 12 11.7833 12 11.5C12 11.2167 12.0958 10.9792 12.2875 10.7875C12.4792 10.5958 12.7167 10.5 13 10.5C13.2833 10.5 13.5208 10.5958 13.7125 10.7875C13.9042 10.9792 14 11.2167 14 11.5C14 11.7833 13.9042 12.0208 13.7125 12.2125C13.5208 12.4042 13.2833 12.5 13 12.5ZM9 16.5C8.71667 16.5 8.47917 16.4042 8.2875 16.2125C8.09583 16.0208 8 15.7833 8 15.5C8 15.2167 8.09583 14.9792 8.2875 14.7875C8.47917 14.5958 8.71667 14.5 9 14.5C9.28333 14.5 9.52083 14.5958 9.7125 14.7875C9.90417 14.9792 10 15.2167 10 15.5C10 15.7833 9.90417 16.0208 9.7125 16.2125C9.52083 16.4042 9.28333 16.5 9 16.5ZM5 16.5C4.71667 16.5 4.47917 16.4042 4.2875 16.2125C4.09583 16.0208 4 15.7833 4 15.5C4 15.2167 4.09583 14.9792 4.2875 14.7875C4.47917 14.5958 4.71667 14.5 5 14.5C5.28333 14.5 5.52083 14.5958 5.7125 14.7875C5.90417 14.9792 6 15.2167 6 15.5C6 15.7833 5.90417 16.0208 5.7125 16.2125C5.52083 16.4042 5.28333 16.5 5 16.5ZM13 16.5C12.7167 16.5 12.4792 16.4042 12.2875 16.2125C12.0958 16.0208 12 15.7833 12 15.5C12 15.2167 12.0958 14.9792 12.2875 14.7875C12.4792 14.5958 12.7167 14.5 13 14.5C13.2833 14.5 13.5208 14.5958 13.7125 14.7875C13.9042 14.9792 14 15.2167 14 15.5C14 15.7833 13.9042 16.0208 13.7125 16.2125C13.5208 16.4042 13.2833 16.5 13 16.5Z" fill="#1D5D4D"/>
                                 </svg>
-                                <p class="date-presentation">Sep. 2014 - Sep. 2019</p>
+                                <p id="date-presentation">Sep. 2014 - Sep. 2019</p>
                             </div>
                             <p class="key-aspects">Social Sciences und Linguistics</p>
                         </div>
@@ -88,7 +88,7 @@
                                     <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M2 20.5C1.45 20.5 0.979167 20.3042 0.5875 19.9125C0.195833 19.5208 0 19.05 0 18.5V4.5C0 3.95 0.195833 3.47917 0.5875 3.0875C0.979167 2.69583 1.45 2.5 2 2.5H3V0.5H5V2.5H13V0.5H15V2.5H16C16.55 2.5 17.0208 2.69583 17.4125 3.0875C17.8042 3.47917 18 3.95 18 4.5V18.5C18 19.05 17.8042 19.5208 17.4125 19.9125C17.0208 20.3042 16.55 20.5 16 20.5H2ZM2 18.5H16V8.5H2V18.5ZM2 6.5H16V4.5H2V6.5ZM9 12.5C8.71667 12.5 8.47917 12.4042 8.2875 12.2125C8.09583 12.0208 8 11.7833 8 11.5C8 11.2167 8.09583 10.9792 8.2875 10.7875C8.47917 10.5958 8.71667 10.5 9 10.5C9.28333 10.5 9.52083 10.5958 9.7125 10.7875C9.90417 10.9792 10 11.2167 10 11.5C10 11.7833 9.90417 12.0208 9.7125 12.2125C9.52083 12.4042 9.28333 12.5 9 12.5ZM5 12.5C4.71667 12.5 4.47917 12.4042 4.2875 12.2125C4.09583 12.0208 4 11.7833 4 11.5C4 11.2167 4.09583 10.9792 4.2875 10.7875C4.47917 10.5958 4.71667 10.5 5 10.5C5.28333 10.5 5.52083 10.5958 5.7125 10.7875C5.90417 10.9792 6 11.2167 6 11.5C6 11.7833 5.90417 12.0208 5.7125 12.2125C5.52083 12.4042 5.28333 12.5 5 12.5ZM13 12.5C12.7167 12.5 12.4792 12.4042 12.2875 12.2125C12.0958 12.0208 12 11.7833 12 11.5C12 11.2167 12.0958 10.9792 12.2875 10.7875C12.4792 10.5958 12.7167 10.5 13 10.5C13.2833 10.5 13.5208 10.5958 13.7125 10.7875C13.9042 10.9792 14 11.2167 14 11.5C14 11.7833 13.9042 12.0208 13.7125 12.2125C13.5208 12.4042 13.2833 12.5 13 12.5ZM9 16.5C8.71667 16.5 8.47917 16.4042 8.2875 16.2125C8.09583 16.0208 8 15.7833 8 15.5C8 15.2167 8.09583 14.9792 8.2875 14.7875C8.47917 14.5958 8.71667 14.5 9 14.5C9.28333 14.5 9.52083 14.5958 9.7125 14.7875C9.90417 14.9792 10 15.2167 10 15.5C10 15.7833 9.90417 16.0208 9.7125 16.2125C9.52083 16.4042 9.28333 16.5 9 16.5ZM5 16.5C4.71667 16.5 4.47917 16.4042 4.2875 16.2125C4.09583 16.0208 4 15.7833 4 15.5C4 15.2167 4.09583 14.9792 4.2875 14.7875C4.47917 14.5958 4.71667 14.5 5 14.5C5.28333 14.5 5.52083 14.5958 5.7125 14.7875C5.90417 14.9792 6 15.2167 6 15.5C6 15.7833 5.90417 16.0208 5.7125 16.2125C5.52083 16.4042 5.28333 16.5 5 16.5ZM13 16.5C12.7167 16.5 12.4792 16.4042 12.2875 16.2125C12.0958 16.0208 12 15.7833 12 15.5C12 15.2167 12.0958 14.9792 12.2875 14.7875C12.4792 14.5958 12.7167 14.5 13 14.5C13.2833 14.5 13.5208 14.5958 13.7125 14.7875C13.9042 14.9792 14 15.2167 14 15.5C14 15.7833 13.9042 16.0208 13.7125 16.2125C13.5208 16.4042 13.2833 16.5 13 16.5Z" fill="#1D5D4D"/>
                                     </svg>  
-                                    <p class="date-presentation">Apr. 2020 - Dec. 2023</p>
+                                    <p id="date-presentation">Apr. 2020 - Dec. 2023</p>
                                 </div>
                                 <p class="key-aspects">Information Systems and Applied Computer Sciences</p>
                                 
@@ -99,18 +99,16 @@
             </section>
 
             <section id="work-experiences">
-            <h2>Work Experiences</h2>
-            <p>Details about my work experience.</p>
-            <ul>
-                <li>Software Developer at Contag AG, Berlin
-                    <ul>
-                        <li>Jan. 2021 - Present</li>
-                        <li>Tech Stack: Java Core, Java SE, Java Swing, ASPX, .NET, Frontend-Entwicklung mit
+            <!-- <h2>Work Experiences</h2> -->
+            <ul id="work-experience-list">
+                <p>Software Developer at Contag AG, Berlin</p>
+                    <p id="work-date-presentation">Jan. 2021 - Present</p>
+                    <p>Tech Stack: Java Core, Java SE, Java Swing, ASPX, .NET, Frontend-Entwicklung mit
 HTML, CSS und JavaScript, Versionsverwaltungsysteme: TFS und Git
-Datenbanken: MS SQL</li>
-                        <li>Responsibilities: Developing and maintaining software applications and infratstructure, collaborating with cross-functional teams, and ensuring code quality.</li>
-                    </ul>
-                </li>
+Datenbanken: MS SQL</p>
+                    <p>Responsibilities: Developing and maintaining software applications and infrastructure, collaborating with cross-functional teams, and ensuring code quality.</p>
+
+
                 <li>Working Student in Software Developement at Siemens Mobility, Erlangen
                     <ul>
                         <li>May 2022 - Nov. 2023</li>
@@ -121,13 +119,15 @@ Datenbanken: MS SQL</li>
                     <li>Working Student und Test Administration at
 Brose Fahrzeugteile SE & Co. KG, Bamberg
                     <ul>
-                        <li>Aug. 2021 - Apr. 2022</li>
+                        <p id="work-date-presentation">Aug. 2021 - Apr. 2022</li>
                         <li>Tech Stack: C#, Codebeamer (ALM) for Test-Reports and Widgets Building</li>
                         <li>Responsibilities: Console Development for testing via Codebeamer-API ,
 development and maintaining of widgets, executing Test-Runs und producing Test-Reports in
 Codebeamer (application lifecycle management)</li>
                     </ul>
                 </li>
+
+
             </ul>
         </section>
 
