preparing project tiles presentation and design

--- a/index.html
+++ b/index.html
@@ -207,13 +207,7 @@ Brose Fahrzeugteile SE & Co. KG</p>
                     </div>
                         <p id="work-responsibilites">Console Development for testing via Codebeamer-API ,
 development and maintaining of widgets, executing Test-Runs und producing Test-Reports in
-Codebeamer (application lifecycle management)</p>
-<!--                         <ul id="tech-list">
-                            <li>C#</li>
-                            <li>Codebeamer (ALM) for Test-Reports</li>
-                            <li>Jenkins for CI/CD</li>
-                        </ul> -->
-                        
+Codebeamer (application lifecycle management)</p>   
                 </div>
 
 
@@ -221,25 +215,22 @@ Codebeamer (application lifecycle management)</p>
         </section>
 
         <section id="projects">
-
-            
             <h2>Projects</h2>
-            <ul>
-                <li>Text Analytics Pipeline with Apache Spark
-                    <ul>
-                        <li>Arbeit mit Projektgruppe zur Textanalyse und Keyword Extraction mit Java über Apache Sparks Framework und John Snow LABS (NLP), Aufbau einer Pipeline</li>
-                        <li>Tech Stack: Java, Apache Sparks, Hadoop NLP (Natural Language Processing)</li>
-                        <li>Code-Referenz</li>
-                    </ul>
-                </li>
-                <li>
-                    <ul>
-                        <li>Entwicklung einer Fullstack-Webapplikation zur Erfassung von Corona-erkrankten</li>
-                        <li>Tech Stack: Deployment auf AWS (Cloud Computing) mit Serverless Framework, Backend in Python & Front-End in React</li>
-                        <li>Code-Referenz</li>
-                    </ul>
-                </li>
-            </ul>
+            <div id="project-list">
+                <div class="project-tile">
+                    <p>Text Analytics Pipeline with Apache Spark</p>
+                        <>Gruppenarbeit zur Textanalyse und Keyword Extraction mit Java über Apache Sparks Framework und John Snow LABS (NLP), Aufbau einer Pipeline</>
+                        <>Tech Stack: Java, Apache Sparks, Hadoop NLP (Natural Language Processing)</>
+                        <>Code-Referenz</>
+                </div>
+
+                <div class="project-tile">
+                    <p>Full Stack Web Application for Corona Patients</p>
+                            <>Entwicklung einer Fullstack-Webapplikation zur Erfassung von Corona-erkrankten</>
+                            <>Tech Stack: Deployment auf AWS (Cloud Computing) mit Serverless Framework, Backend in Python & Front-End in React</>
+                            <>Code-Referenz</>
+                </div>
+            </div>
         </section>
 
         <section id="study">
