add images to master thesis section

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
         <section id="study">
             <h2>Master</h2>
             <div id="thesis-group-pic">
-                <img>
-                <img>
-                <img>
+                <img class="thesis-pic" src="assets/images/place-filler.png">
+                <img class="thesis-pic" src="assets/images/thesis-title.png">
+                <img class="thesis-pic" src="assets/images/university-logo.png">
             </div>
             <ul>
                 <li>May 2023 - Dec 2023</li>
