--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p id="work-date-presentation">Aug. 2021 - Apr. 2022</li>
+                            <p id="work-date-presentation">Aug. 2021 - Apr. 2022</p>
                         </div>
                             <p id="work-responsibilites">Console Development for testing via Codebeamer-API ,
     development and maintaining of widgets, executing Test-Runs und producing Test-Reports in
@@ -257,41 +257,73 @@
         </section>
 
         <section id="study">
-            <h2>Master</h2>
             <div id="thesis-group-pic">
                 <img class="thesis-pic" src="assets/images/place-filler.png">
                 <img class="thesis-pic" src="assets/images/thesis-title.png">
                 <img class="thesis-pic" src="assets/images/university-logo.png">
             </div>
-            <ul>
-                <li>May 2023 - Dec 2023</li>
-                <li>bei Prof Dr. Guido Wirtz</li>
-                <li>Titel: A comparative performance study and evaluation of performance qualities: MicroStream vs Redis & Aerospike</li>
-                <li>Es handelt sich um eine Java-Benchmark, die auf der TPC- C-Spezifikation realisiert wurde. Dabei wurde Spring Boot als Server- Backend-Anwendungen für die Java-orientierte Datenbank MicroStream sowie die NoSQL-Datenbanken Redis und Aerospike verwendet. Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</li>
-                <ul>
-                    <li>
-                        <img> <!-- Icon Reference -->
-                        <h4>Distributed Systems Architecture and Middleware</h4>
-                        <span>Implementation of a Full Stack Spring Boot App + Security, Google Cloud, Cloud Functions and Ops</span>
-                    </li>
-                    <li>
-                        <img> <!-- Icon Reference -->
-                        <h4>Service-Oriented Architecture and Web Services</h4>
-                        <span>Implementing a Java REST API backend without any Framework just with JAX-RS and HATEOAS + Deployment of Services with Docker and Kubernetes</span>
-                    </li>
+            <div class="study-content">
+                    <span class="study-title">Masterarbeit</span>
+                    <div class="study-tile-line">
+                        <div id="clock-icon">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <mask id="mask0_2113_484" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="16">
+                                        <rect width="16" height="16" fill="#D9D9D9"/>
+                                    </mask>
+                                    <g mask="url(#mask0_2113_484)">
+                                        <path d="M7.9999 14.6666C7.16657 14.6666 6.38601 14.5083 5.65824 14.1916C4.93046 13.875 4.29712 13.4472 3.75824 12.9083C3.21935 12.3694 2.79157 11.7361 2.4749 11.0083C2.15824 10.2805 1.9999 9.49998 1.9999 8.66665C1.9999 7.83332 2.15824 7.05276 2.4749 6.32498C2.79157 5.59721 3.21935 4.96387 3.75824 4.42498C4.29712 3.88609 4.93046 3.45832 5.65824 3.14165C6.38601 2.82498 7.16657 2.66665 7.9999 2.66665C8.83324 2.66665 9.61379 2.82498 10.3416 3.14165C11.0693 3.45832 11.7027 3.88609 12.2416 4.42498C12.7805 4.96387 13.2082 5.59721 13.5249 6.32498C13.8416 7.05276 13.9999 7.83332 13.9999 8.66665C13.9999 9.49998 13.8416 10.2805 13.5249 11.0083C13.2082 11.7361 12.7805 12.3694 12.2416 12.9083C11.7027 13.4472 11.0693 13.875 10.3416 14.1916C9.61379 14.5083 8.83324 14.6666 7.9999 14.6666ZM9.86657 11.4667L10.7999 10.5333L8.66657 8.39998V5.33332H7.33324V8.93332L9.86657 11.4667ZM3.73324 1.56665L4.66657 2.49998L1.83324 5.33332L0.899902 4.39998L3.73324 1.56665ZM12.2666 1.56665L15.0999 4.39998L14.1666 5.33332L11.3332 2.49998L12.2666 1.56665ZM7.9999 13.3333C9.2999 13.3333 10.4027 12.8805 11.3082 11.975C12.2138 11.0694 12.6666 9.96665 12.6666 8.66665C12.6666 7.36665 12.2138 6.26387 11.3082 5.35832C10.4027 4.45276 9.2999 3.99998 7.9999 3.99998C6.6999 3.99998 5.59713 4.45276 4.69157 5.35832C3.78601 6.26387 3.33324 7.36665 3.33324 8.66665C3.33324 9.96665 3.78601 11.0694 4.69157 11.975C5.59713 12.8805 6.6999 13.3333 7.9999 13.3333Z" fill="#1D5D4D"/>
+                                    </g>
+                                </svg>
+                        </div>
+                        <p class="study-date-presentation">May 2023 - Dec 2023</p>
+                    </div>
 
-                    <li>
-                        <img> <!-- Icon Reference -->
-                        <h4>PKS - Programmierung komplexere interagierender Systeme (in Java)</h4>
-                        <span>Prozesse, Prozesskommunikation und Multithreading durch Shared Memory, Message Passing-Paradigma</span>
-                    </li>
-                    <li>
-                        <img> <!-- Icon Reference -->
-                        <h4>AJP - Advanced Java Programming</h4>
-                        <span>Arbeit mit NIO-Klassen, Integration und Unit-Testing, Git, Gradle , Java mit XML, GUI Programmierung und MVC</span>
-                    </li>
-                </ul>
-            </ul>
+
+                    <div class="study-prof">bei Prof. Dr. Guid Wirtz mit Note 1.5</div>
+                    <div class="thesis-title">Titel: A comparative performance study and evaluation of performance qualities: <span class="thesis-title-highlight">MicroStream vs Redis & Aerospike</span></div>
+                    <div class="thesis-description">Es handelt sich um eine Java-Benchmark, die auf der TPC-C-Spezifikation realisiert wurde. Dabei wurde Spring Boot als Server- Backend-Anwendungen für die Java-orientierte Datenbank MicroStream sowie die NoSQL-Datenbanken Redis und Aerospike verwendet. Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</div>
+                    
+                        <div class="course-tile">
+                            <!-- Icon Reference -->
+                            <svg width="69" height="69" viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="34.5" cy="34.5" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
+                                <mask id="mask0_2186_421" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="17" y="18" width="35" height="35">
+                                <rect x="17" y="18" width="35" height="35" fill="#D9D9D9"/>
+                                </mask>
+                                <g mask="url(#mask0_2186_421)">
+                                <path d="M28.6666 42.7917H40.3333V39.875H28.6666V42.7917ZM24.2916 38.4167H27.2083V35.5H24.2916V38.4167ZM28.6666 38.4167H31.5833V35.5H28.6666V38.4167ZM33.0416 38.4167H35.9583V35.5H33.0416V38.4167ZM37.4166 38.4167H40.3333V35.5H37.4166V38.4167ZM41.7916 38.4167H44.7083V35.5H41.7916V38.4167ZM22.8333 47.1667C22.0312 47.1667 21.3446 46.8811 20.7734 46.3099C20.2022 45.7387 19.9166 45.0521 19.9166 44.25V26.75C19.9166 25.9479 20.2022 25.2613 20.7734 24.6901C21.3446 24.1189 22.0312 23.8333 22.8333 23.8333H46.1666C46.9687 23.8333 47.6553 24.1189 48.2265 24.6901C48.7977 25.2613 49.0833 25.9479 49.0833 26.75V44.25C49.0833 45.0521 48.7977 45.7387 48.2265 46.3099C47.6553 46.8811 46.9687 47.1667 46.1666 47.1667H22.8333ZM22.8333 31.125H46.1666V26.75H22.8333V31.125ZM22.8333 44.25H46.1666V34.0417H22.8333V44.25Z" fill="#40D1AD"/>
+                                </g>
+                            </svg>
+                            <h4>Distributed Systems Architecture and Middleware</h4>
+                            <span>Implementation of a Full Stack Spring Boot App + Security, Google Cloud, Cloud Functions and Ops</span>
+                        </div>
+                        <div class="course-tile">
+                            <!-- Icon Reference -->
+                             <svg width="69" height="69" viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="34.5" cy="34.5" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
+                                <mask id="mask0_2142_96" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="17" y="17" width="34" height="34">
+                                <rect x="17" y="17" width="34" height="34" fill="#D9D9D9"/>
+                                </mask>
+                                <g mask="url(#mask0_2142_96)">
+                                <path d="M18.4167 46.75V43.9167H49.5834V46.75H18.4167ZM22.6667 42.5C21.8876 42.5 21.2206 42.2226 20.6657 41.6677C20.1108 41.1128 19.8334 40.4458 19.8334 39.6667V24.0833C19.8334 23.3042 20.1108 22.6372 20.6657 22.0823C21.2206 21.5274 21.8876 21.25 22.6667 21.25H45.3334C46.1126 21.25 46.7796 21.5274 47.3345 22.0823C47.8893 22.6372 48.1667 23.3042 48.1667 24.0833V39.6667C48.1667 40.4458 47.8893 41.1128 47.3345 41.6677C46.7796 42.2226 46.1126 42.5 45.3334 42.5H22.6667ZM22.6667 39.6667H45.3334V24.0833H22.6667V39.6667Z" fill="#40D1AD"/>
+                                </g>
+                            </svg>
+                            <h4>Service-Oriented Architecture and Web Services</h4>
+                            <span>Implementing a Java REST API backend without any Framework just with JAX-RS and HATEOAS + Deployment of Services with Docker and Kubernetes</span>
+                        </div>
+
+                        <div class="course-tile">
+                            <img> <!-- Icon Reference -->
+                            <h4>PKS - Programmierung komplexere interagierender Systeme (in Java)</h4>
+                            <span>Prozesse, Prozesskommunikation und Multithreading durch Shared Memory, Message Passing-Paradigma</span>
+                        </div>
+                        <div class="course-tile">
+                            <img> <!-- Icon Reference -->
+                            <h4>AJP - Advanced Java Programming</h4>
+                            <span>Arbeit mit NIO-Klassen, Integration und Unit-Testing, Git, Gradle , Java mit XML, GUI Programmierung und MVC</span>
+                        </div>
+                </div>
+            </div>
         </section>
 
         <section id="others">
