add thesis styles for course tiles

--- a/index.html
+++ b/index.html
@@ -264,23 +264,26 @@
                     <img class="thesis-pic" src="assets/images/university-logo.png">
                 </div>
                 <div class="study-content">
-                        <span class="study-title">Masterarbeit</span>
-                        <div class="study-tile-line">
-                            <div id="clock-icon">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <mask id="mask0_2113_484" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="16">
-                                            <rect width="16" height="16" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_2113_484)">
-                                            <path d="M7.9999 14.6666C7.16657 14.6666 6.38601 14.5083 5.65824 14.1916C4.93046 13.875 4.29712 13.4472 3.75824 12.9083C3.21935 12.3694 2.79157 11.7361 2.4749 11.0083C2.15824 10.2805 1.9999 9.49998 1.9999 8.66665C1.9999 7.83332 2.15824 7.05276 2.4749 6.32498C2.79157 5.59721 3.21935 4.96387 3.75824 4.42498C4.29712 3.88609 4.93046 3.45832 5.65824 3.14165C6.38601 2.82498 7.16657 2.66665 7.9999 2.66665C8.83324 2.66665 9.61379 2.82498 10.3416 3.14165C11.0693 3.45832 11.7027 3.88609 12.2416 4.42498C12.7805 4.96387 13.2082 5.59721 13.5249 6.32498C13.8416 7.05276 13.9999 7.83332 13.9999 8.66665C13.9999 9.49998 13.8416 10.2805 13.5249 11.0083C13.2082 11.7361 12.7805 12.3694 12.2416 12.9083C11.7027 13.4472 11.0693 13.875 10.3416 14.1916C9.61379 14.5083 8.83324 14.6666 7.9999 14.6666ZM9.86657 11.4667L10.7999 10.5333L8.66657 8.39998V5.33332H7.33324V8.93332L9.86657 11.4667ZM3.73324 1.56665L4.66657 2.49998L1.83324 5.33332L0.899902 4.39998L3.73324 1.56665ZM12.2666 1.56665L15.0999 4.39998L14.1666 5.33332L11.3332 2.49998L12.2666 1.56665ZM7.9999 13.3333C9.2999 13.3333 10.4027 12.8805 11.3082 11.975C12.2138 11.0694 12.6666 9.96665 12.6666 8.66665C12.6666 7.36665 12.2138 6.26387 11.3082 5.35832C10.4027 4.45276 9.2999 3.99998 7.9999 3.99998C6.6999 3.99998 5.59713 4.45276 4.69157 5.35832C3.78601 6.26387 3.33324 7.36665 3.33324 8.66665C3.33324 9.96665 3.78601 11.0694 4.69157 11.975C5.59713 12.8805 6.6999 13.3333 7.9999 13.3333Z" fill="#1D5D4D"/>
-                                        </g>
-                                    </svg>
+                        <div class="thesis-presentation">
+                            <span class="study-title">Masterarbeit</span>
+                            <div class="study-tile-line">
+                                <div id="clock-icon">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <mask id="mask0_2113_484" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="16">
+                                                <rect width="16" height="16" fill="#D9D9D9"/>
+                                            </mask>
+                                            <g mask="url(#mask0_2113_484)">
+                                                <path d="M7.9999 14.6666C7.16657 14.6666 6.38601 14.5083 5.65824 14.1916C4.93046 13.875 4.29712 13.4472 3.75824 12.9083C3.21935 12.3694 2.79157 11.7361 2.4749 11.0083C2.15824 10.2805 1.9999 9.49998 1.9999 8.66665C1.9999 7.83332 2.15824 7.05276 2.4749 6.32498C2.79157 5.59721 3.21935 4.96387 3.75824 4.42498C4.29712 3.88609 4.93046 3.45832 5.65824 3.14165C6.38601 2.82498 7.16657 2.66665 7.9999 2.66665C8.83324 2.66665 9.61379 2.82498 10.3416 3.14165C11.0693 3.45832 11.7027 3.88609 12.2416 4.42498C12.7805 4.96387 13.2082 5.59721 13.5249 6.32498C13.8416 7.05276 13.9999 7.83332 13.9999 8.66665C13.9999 9.49998 13.8416 10.2805 13.5249 11.0083C13.2082 11.7361 12.7805 12.3694 12.2416 12.9083C11.7027 13.4472 11.0693 13.875 10.3416 14.1916C9.61379 14.5083 8.83324 14.6666 7.9999 14.6666ZM9.86657 11.4667L10.7999 10.5333L8.66657 8.39998V5.33332H7.33324V8.93332L9.86657 11.4667ZM3.73324 1.56665L4.66657 2.49998L1.83324 5.33332L0.899902 4.39998L3.73324 1.56665ZM12.2666 1.56665L15.0999 4.39998L14.1666 5.33332L11.3332 2.49998L12.2666 1.56665ZM7.9999 13.3333C9.2999 13.3333 10.4027 12.8805 11.3082 11.975C12.2138 11.0694 12.6666 9.96665 12.6666 8.66665C12.6666 7.36665 12.2138 6.26387 11.3082 5.35832C10.4027 4.45276 9.2999 3.99998 7.9999 3.99998C6.6999 3.99998 5.59713 4.45276 4.69157 5.35832C3.78601 6.26387 3.33324 7.36665 3.33324 8.66665C3.33324 9.96665 3.78601 11.0694 4.69157 11.975C5.59713 12.8805 6.6999 13.3333 7.9999 13.3333Z" fill="#1D5D4D"/>
+                                            </g>
+                                        </svg>
+                                </div>
+                                <p class="study-date-presentation">May 2023 - Dec 2023</p>
                             </div>
-                            <p class="study-date-presentation">May 2023 - Dec 2023</p>
+                            <div class="study-prof">bei Prof. Dr. Guid Wirtz mit Note 1.5</div>
+                            <div class="thesis-title">Titel: A comparative performance study and evaluation of performance qualities: <span class="thesis-title-highlight">MicroStream vs Redis & Aerospike</span></div>
                         </div>
-                        <div class="study-prof">bei Prof. Dr. Guid Wirtz mit Note 1.5</div>
-                        <div class="thesis-title">Titel: A comparative performance study and evaluation of performance qualities: <span class="thesis-title-highlight">MicroStream vs Redis & Aerospike</span></div>
                         <div class="thesis-description">Es handelt sich um eine Java-Benchmark, die auf der TPC-C-Spezifikation realisiert wurde. Dabei wurde Spring Boot als Server- Backend-Anwendungen für die Java-orientierte Datenbank MicroStream sowie die NoSQL-Datenbanken Redis und Aerospike verwendet. Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</div>
+                        
                         <div class="course-tile">
                             <!-- Icon Reference -->
                             <div class="course-icon">
