--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
         <section id="study">
             <div class="study-container">
                 <div id="thesis-group-pic">
-                    <img class="thesis-pic" src="assets/images/place-filler.png">
-                    <img class="thesis-pic" src="assets/images/thesis-title.png">
-                    <img class="thesis-pic" src="assets/images/university-logo.png">
+                    <img class="thesis-pic" id="place-filler" src="assets/images/place-filler.png">
+                    <img class="thesis-pic" id="thesis-title-page" src="assets/images/thesis-title.png">
+                    <img class="thesis-pic" id="university-logo" src="assets/images/university-logo.png">
                 </div>
                 <div class="study-content">
                         <div class="thesis-presentation">
@@ -282,8 +282,11 @@
                             <div class="study-prof">bei Prof. Dr. Guid Wirtz mit Note 1.5</div>
                             <div class="thesis-title">Titel: A comparative performance study and evaluation of performance qualities: <span class="thesis-title-highlight">MicroStream vs Redis & Aerospike</span></div>
                         </div>
-                        <div class="thesis-description">Es handelt sich um eine Java-Benchmark, die auf der TPC-C-Spezifikation realisiert wurde. Dabei wurde Spring Boot als Server- Backend-Anwendungen für die Java-orientierte Datenbank MicroStream sowie die NoSQL-Datenbanken Redis und Aerospike verwendet. Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</div>
-                        
+                        <div class="thesis-description">
+                            <p>Es handelt sich um eine Java-Benchmark, die auf der TPC-C-Spezifikation realisiert wurde.</p> 
+                            <p>Dabei wurde Spring Boot als Server- Backend-Anwendungen für die Java-orientierte Datenbank MicroStream sowie die NoSQL-Datenbanken Redis und Aerospike verwendet.</p>
+                            <p>Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</p>
+                        </div>
                         <div class="course-tile">
                             <!-- Icon Reference -->
                             <div class="course-icon">
