add style to other sectio, need proper adjustment

--- a/index.html
+++ b/index.html
@@ -369,18 +369,18 @@
         </section>
 
         <section id="others">
-            <h2>Others</h2>
-            <span>
-                Wenn ich nicht gerade an Codezeilen feile oder neue Features teste, findet man mich vermutlich auf dem Badmintonfeld, im Kampfsporttraining oder irgendwo, wo ein Ball im Spiel ist – Hauptsache Bewegung und Herausforderung! Ich liebe es, mich sportlich auszupowern und Neues auszuprobieren – sei es beim Boxsack oder beim Beachvolleyball.
-
-Neben meiner Leidenschaft für Technik und Sport verbringe ich viel Zeit mit meiner Freundin, mit der ich gerne die Welt entdecke. Reisen bedeutet für mich, nicht nur neue Orte zu sehen, sondern neue Perspektiven zu gewinnen – das inspiriert mich auch in meiner Arbeit.
-
-In meiner Freizeit tüftle ich gerne an alter Hardware herum – was andere wegwerfen, baue ich auseinander, verstehe es (manchmal), und bringe es im besten Fall wieder zum Leben.
-
-Ich bin ein kommunikativer Mensch mit einer gesunden Portion Humor. Egal ob im Team oder privat – ich glaube daran, dass gute Stimmung der beste Katalysator für gute Ideen ist.
-
-Fun Fact: Ich habe mal versucht, meinen alten Röhrenmonitor in ein “Smart Home”-Gerät zu verwandeln. Jetzt geht das Licht an, wenn ich den VGA-Stecker reinstecke – Fortschritt auf meine Weise!
-            </span>
+            <div class="others_container">
+                <div class="others_title">
+                    <p class="others_andere">/Andere</p>
+                </div>
+                <div class="others_description">
+                    <p class="others_paragraph">Wenn ich nicht gerade an Codezeilen feile oder neue Features teste, findet man mich vermutlich auf dem Badmintonfeld, im Kampfsporttraining oder irgendwo, wo ein Ball im Spiel ist – Hauptsache Bewegung und Herausforderung! Ich liebe es, mich sportlich auszupowern und Neues auszuprobieren – sei es beim Boxsack oder beim Beachvolleyball.</p>
+                    <p class="others_paragraph">Neben meiner Leidenschaft für Technik und Sport verbringe ich viel Zeit mit meiner Freundin, mit der ich gerne die Welt entdecke. Reisen bedeutet für mich, nicht nur neue Orte zu sehen, sondern neue Perspektiven zu gewinnen – das inspiriert mich auch in meiner Arbeit.</p>
+                    <p class="others_paragraph">In meiner Freizeit tüftle ich gerne an alter Hardware herum – was andere wegwerfen, baue ich auseinander, verstehe es (manchmal), und bringe es im besten Fall wieder zum Leben.</p>
+                    <p class="others_paragraph">Ich bin ein kommunikativer Mensch mit einer gesunden Portion Humor. Egal ob im Team oder privat – ich glaube daran, dass gute Stimmung der beste Katalysator für gute Ideen ist.</p>
+                    <p class="others_paragraph">Fun Fact: Ich habe mal versucht, meinen alten Röhrenmonitor in ein “Smart Home”-Gerät zu verwandeln. Jetzt geht das Licht an, wenn ich den VGA-Stecker reinstecke – Fortschritt auf meine Weise!</p>
+                </div>
+            </div>
         </section>
     </div>
 
