--- a/index.html
+++ b/index.html
@@ -28,22 +28,17 @@
                         <div id="status-elipse"></div>
                         <p id="status-avalaible">Verfügbar</p>
                     </div>
-
-
                     <h1>ANDRE MAIER</h1>
                     <div id="hero-description">
-                        <p>Selbstmotivierter und aufgeweckter Softwareentwickler der gemeinsam mit seinem Team Erfolge erzielen
-    will.</p>
-    <p>Dank seiner schnellen Auffassungsgabe und seiner Leidenschaft zum Lernen ist enthusiastisch darüber
-    den Umgang mit neuen Technologien zu vertiefen.</p>
-    <p>Die Mischung aus unterschiedlichen Bereichen verspricht
-    dabei einen sorgfältigen und rücksichtsvollen Umgang mit Menschen und Technologien.</p></div>
+                        <p>Selbstmotivierter und aufgeweckter Softwareentwickler der gemeinsam mit seinem Team Erfolge erzielenwill.</p>
+                        <p>Dank seiner schnellen Auffassungsgabe und seiner Leidenschaft zum Lernen ist enthusiastisch darüber den Umgang mit neuen Technologien zu vertiefen.</p>
+                        <p>Die Mischung aus unterschiedlichen Bereichen verspricht dabei einen sorgfältigen und rücksichtsvollen Umgang mit Menschen und Technologien.</p>
+                    </div>
                 </div>
-            <img src="assets/images/profile-pic.jpg" id="profile-pic">
+                <img src="assets/images/profile-pic.jpg" id="profile-pic">
             </section>
 
             <section id="education">
-            <!-- <h2>Education</h2> -->
             <ul id="education-list">
                 <div id="education-tile">
                     <div id="tile-info">
@@ -62,7 +57,6 @@
                             <p id="study-name">Bachelor of Arts in Kulturwissenschaften</p>
                             <p class="uni-name">Europa-Universität Viadrina, Frankfurt (Oder)</p>
                             <div class="tile-line">
-                                <!-- Ein weiteres Icon hier -->
                                 <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 20.5C1.45 20.5 0.979167 20.3042 0.5875 19.9125C0.195833 19.5208 0 19.05 0 18.5V4.5C0 3.95 0.195833 3.47917 0.5875 3.0875C0.979167 2.69583 1.45 2.5 2 2.5H3V0.5H5V2.5H13V0.5H15V2.5H16C16.55 2.5 17.0208 2.69583 17.4125 3.0875C17.8042 3.47917 18 3.95 18 4.5V18.5C18 19.05 17.8042 19.5208 17.4125 19.9125C17.0208 20.3042 16.55 20.5 16 20.5H2ZM2 18.5H16V8.5H2V18.5ZM2 6.5H16V4.5H2V6.5ZM9 12.5C8.71667 12.5 8.47917 12.4042 8.2875 12.2125C8.09583 12.0208 8 11.7833 8 11.5C8 11.2167 8.09583 10.9792 8.2875 10.7875C8.47917 10.5958 8.71667 10.5 9 10.5C9.28333 10.5 9.52083 10.5958 9.7125 10.7875C9.90417 10.9792 10 11.2167 10 11.5C10 11.7833 9.90417 12.0208 9.7125 12.2125C9.52083 12.4042 9.28333 12.5 9 12.5ZM5 12.5C4.71667 12.5 4.47917 12.4042 4.2875 12.2125C4.09583 12.0208 4 11.7833 4 11.5C4 11.2167 4.09583 10.9792 4.2875 10.7875C4.47917 10.5958 4.71667 10.5 5 10.5C5.28333 10.5 5.52083 10.5958 5.7125 10.7875C5.90417 10.9792 6 11.2167 6 11.5C6 11.7833 5.90417 12.0208 5.7125 12.2125C5.52083 12.4042 5.28333 12.5 5 12.5ZM13 12.5C12.7167 12.5 12.4792 12.4042 12.2875 12.2125C12.0958 12.0208 12 11.7833 12 11.5C12 11.2167 12.0958 10.9792 12.2875 10.7875C12.4792 10.5958 12.7167 10.5 13 10.5C13.2833 10.5 13.5208 10.5958 13.7125 10.7875C13.9042 10.9792 14 11.2167 14 11.5C14 11.7833 13.9042 12.0208 13.7125 12.2125C13.5208 12.4042 13.2833 12.5 13 12.5ZM9 16.5C8.71667 16.5 8.47917 16.4042 8.2875 16.2125C8.09583 16.0208 8 15.7833 8 15.5C8 15.2167 8.09583 14.9792 8.2875 14.7875C8.47917 14.5958 8.71667 14.5 9 14.5C9.28333 14.5 9.52083 14.5958 9.7125 14.7875C9.90417 14.9792 10 15.2167 10 15.5C10 15.7833 9.90417 16.0208 9.7125 16.2125C9.52083 16.4042 9.28333 16.5 9 16.5ZM5 16.5C4.71667 16.5 4.47917 16.4042 4.2875 16.2125C4.09583 16.0208 4 15.7833 4 15.5C4 15.2167 4.09583 14.9792 4.2875 14.7875C4.47917 14.5958 4.71667 14.5 5 14.5C5.28333 14.5 5.52083 14.5958 5.7125 14.7875C5.90417 14.9792 6 15.2167 6 15.5C6 15.7833 5.90417 16.0208 5.7125 16.2125C5.52083 16.4042 5.28333 16.5 5 16.5ZM13 16.5C12.7167 16.5 12.4792 16.4042 12.2875 16.2125C12.0958 16.0208 12 15.7833 12 15.5C12 15.2167 12.0958 14.9792 12.2875 14.7875C12.4792 14.5958 12.7167 14.5 13 14.5C13.2833 14.5 13.5208 14.5958 13.7125 14.7875C13.9042 14.9792 14 15.2167 14 15.5C14 15.7833 13.9042 16.0208 13.7125 16.2125C13.5208 16.4042 13.2833 16.5 13 16.5Z" fill="#1D5D4D"/>
                                 </svg>
@@ -129,13 +123,6 @@
                                 <p id="work-date-presentation">Dec. 2023 - Present</p>
                             </div>
                             <p id="work-responsibilites">Developing and maintaining software applications and infrastructure, collaborating with cross-functional teams, and ensuring code quality.</p>
-    <!--                         <ul id="tech-list">
-                                <li>Java SE, Swing</li>
-                                <li>C#, ASPX, .NET</li>
-                                <li>HTML, CSS und JavaScript</li>
-                                <li>TFS, Git</li>
-                                <li>MS SQL</li>
-                            </ul> -->
                     </div>
 
                     <div class="work-tile">
@@ -167,11 +154,6 @@
                             <p id="work-date-presentation">May 2022 - Nov. 2023</p>        
                         </div>
                         <p id="work-responsibilites">Assisting in the development of software solutions and software migration, participating in code reviews, and contributing to project documentation.</p>
-    <!--                         <ul id="tech-list">
-                                <li>.NET und C#</li>
-                                <li>Jenkins, GitLab for CI/CD</li>      
-                                <li>Jfrog for Artifactory management</li>
-                            </ul> -->
                     </div>    
 
                     <div class="work-tile">
@@ -288,7 +270,6 @@
                             <p>Anschließend wurde ihre Leistung getestet und Unterschiede in Datenmodellen und anderen Datenbankeigenschaen und Implikation für die Anwedungsebene der Software ermittelt.</p>
                         </div>
                         <div class="course-tile">
-                            <!-- Icon Reference -->
                             <div class="course-icon">
                                 <svg width="69" height="69" viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="34.5" cy="34.5" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
@@ -307,7 +288,6 @@
                         </div>
 
                         <div class="course-tile">
-                            <!-- Icon Reference -->
                             <div class="course-icon">
                                 <svg width="69" height="69" viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="34.5" cy="34.5" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
@@ -326,7 +306,6 @@
                         </div>
 
                         <div class="course-tile">
-                            <!-- Icon Reference -->
                             <div class="course-icon">
                             <svg width="69" height="69" viewBox="0 0 69 69" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="34.5" cy="34.5" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
@@ -345,7 +324,6 @@
                         </div>
 
                         <div class="course-tile">
-                            <!-- Icon Reference -->
                             <div class="course-icon">
                             <svg width="69" height="70" viewBox="0 0 69 70" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="34.5" cy="35" r="34" fill="#FDFDFF" stroke="#40D1AD"/>
@@ -370,17 +348,20 @@
 
         <section id="others">
             <div class="others_container">
-                <div class="others_title">
-                    <p class="others_andere">/Andere</p>
-                </div>
-                <div class="others_description">
-                    <p class="others_paragraph">Wenn ich nicht gerade an Codezeilen feile oder neue Features teste, findet man mich vermutlich auf dem Badmintonfeld, im Kampfsporttraining oder irgendwo, wo ein Ball im Spiel ist – Hauptsache Bewegung und Herausforderung! Ich liebe es, mich sportlich auszupowern und Neues auszuprobieren – sei es beim Boxsack oder beim Beachvolleyball.</p>
-                    <p class="others_paragraph">Neben meiner Leidenschaft für Technik und Sport verbringe ich viel Zeit mit meiner Freundin, mit der ich gerne die Welt entdecke. Reisen bedeutet für mich, nicht nur neue Orte zu sehen, sondern neue Perspektiven zu gewinnen – das inspiriert mich auch in meiner Arbeit.</p>
-                    <p class="others_paragraph">In meiner Freizeit tüftle ich gerne an alter Hardware herum – was andere wegwerfen, baue ich auseinander, verstehe es (manchmal), und bringe es im besten Fall wieder zum Leben.</p>
-                    <p class="others_paragraph">Ich bin ein kommunikativer Mensch mit einer gesunden Portion Humor. Egal ob im Team oder privat – ich glaube daran, dass gute Stimmung der beste Katalysator für gute Ideen ist.</p>
-                    <p class="others_paragraph">Fun Fact: Ich habe mal versucht, meinen alten Röhrenmonitor in ein “Smart Home”-Gerät zu verwandeln. Jetzt geht das Licht an, wenn ich den VGA-Stecker reinstecke – Fortschritt auf meine Weise!</p>
+                <div class="others_content">
+                    <div class="others_title">
+                        <p class="others_andere">/Andere</p>
+                    </div>
+                    <div class="others_description">
+                        <p class="others_paragraph">Wenn ich nicht gerade an Codezeilen feile oder neue Features teste, findet man mich vermutlich auf dem Badmintonfeld, im Kampfsporttraining oder irgendwo, wo ein Ball im Spiel ist – Hauptsache Bewegung und Herausforderung! Ich liebe es, mich sportlich auszupowern und Neues auszuprobieren – sei es beim Boxsack oder beim Beachvolleyball.</p>
+                        <p class="others_paragraph">Neben meiner Leidenschaft für Technik und Sport verbringe ich viel Zeit mit meiner Freundin, mit der ich gerne die Welt entdecke. Reisen bedeutet für mich, nicht nur neue Orte zu sehen, sondern neue Perspektiven zu gewinnen – das inspiriert mich auch in meiner Arbeit.</p>
+                        <p class="others_paragraph">In meiner Freizeit tüftle ich gerne an alter Hardware herum – was andere wegwerfen, baue ich auseinander, verstehe es (manchmal), und bringe es im besten Fall wieder zum Leben.</p>
+                        <p class="others_paragraph">Ich bin ein kommunikativer Mensch mit einer gesunden Portion Humor. Egal ob im Team oder privat – ich glaube daran, dass gute Stimmung der beste Katalysator für gute Ideen ist.</p>
+                        <p class="others_paragraph">Fun Fact: Ich habe mal versucht, meinen alten Röhrenmonitor in ein “Smart Home”-Gerät zu verwandeln. Jetzt geht das Licht an, wenn ich den VGA-Stecker reinstecke – Fortschritt auf meine Weise!</p>
+                    </div>
                 </div>
             </div>
+
         </section>
     </div>
 
