--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#work-experience" class="nav-link">Praktische Erfahrung</a>
         <a href="#projects" class="nav-link">Projekte</a>
         <a href="#study" class="nav-link">Studium</a>
+        <a href="#study" class="nav-link">Studium</a>
     </nav>
 
     <div class="nav-right">
