include footer style

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </ul>
         </section>
 
-                <section id="projects">
+        <section id="projects">
             <div id="project-list">
                 <div class="project-tile">
                     <p class="project-title">Media computer science project</p>
@@ -255,8 +255,6 @@ Codebeamer (application lifecycle management)</p>
 
             </div>
         </section>
-
-
 
         <section id="study">
             <div class="study-container">
@@ -434,15 +432,27 @@ Codebeamer (application lifecycle management)</p>
 
         </div>
     </div>
-    </div>
 
-    <footer>
-        <p>© 2025 Andre Maier. <br>
-          Designed by Yelyzaveta Khoroshun. <br> 
-          All rights reserved.</p>
+
+    <footer id="footer">
+        <div id="footer-text">
+            © 2025 Andre Maier
+          Designed by Yelyzaveta Khoroshun
+          All rights reserved.
+        </div>
+        <div id="footer-links">
+            Ausbildung
+            Praktische Erfahrung
+            Projects
+            Relevante Module
+            Andere
+        </div>
+        <div id="footer-icons">
+            
+        </div>
+
     </footer>
 
     <script src="index.js" charset="utf-8"></script>
-</script>
 </body>
 </html>
