add insta icon and adjusting the elements in footer

--- a/index.html
+++ b/index.html
@@ -435,11 +435,18 @@ Codebeamer (application lifecycle management)</p>
 
 
     <footer id="footer">
-        <div id="footer-text">
-            © 2025 Andre Maier
-          Designed by Yelyzaveta Khoroshun
-          All rights reserved.
+        <!-- /* Space line in between */ -->
+        <div id ="spacer">
+            <svg width="1278" height="1" viewBox="0 0 1278 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <line x1="4.37114e-08" y1="0.5" x2="1278" y2="0.500112" stroke="#D9D9D9"/>
+            </svg>
         </div>
+
+        <div id="footer-text">
+            <p>© 2025 Andre Maier,</p>
+            <p>designed by Yelyzaveta Khoroshun</p>
+        </div>
+
         <div id="footer-links">
             Ausbildung
             Praktische Erfahrung
@@ -447,8 +454,24 @@ Codebeamer (application lifecycle management)</p>
             Relevante Module
             Andere
         </div>
+
         <div id="footer-icons">
-            
+            <div id="telegram-icon">
+                <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.8037 12.06C11.4815 12.06 12.031 11.5105 12.031 10.8327C12.031 10.1549 11.4815 9.60547 10.8037 9.60547C10.1259 9.60547 9.57642 10.1549 9.57642 10.8327C9.57642 11.5105 10.1259 12.06 10.8037 12.06Z" stroke="#1C1B1F" stroke-width="2.45454" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M18.1672 19.4233C18.845 19.4233 19.3945 18.8738 19.3945 18.196C19.3945 17.5182 18.845 16.9688 18.1672 16.9688C17.4894 16.9688 16.9399 17.5182 16.9399 18.196C16.9399 18.8738 17.4894 19.4233 18.1672 19.4233Z" stroke="#1C1B1F" stroke-width="2.45454" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M9.57641 10.8327C9.57641 13.1111 10.4815 15.2963 12.0926 16.9074C13.7037 18.5185 15.8889 19.4236 18.1673 19.4236M7.12187 25.8054C9.91785 27.6301 13.2908 28.354 16.5893 27.8373C19.8878 27.3206 22.8778 25.5999 24.9819 23.0076C27.0859 20.4153 28.1547 17.1353 27.9819 13.8011C27.809 10.4668 26.4068 7.3149 24.0459 4.95406C21.6851 2.59323 18.5332 1.19097 15.1989 1.01812C11.8647 0.845264 8.58467 1.91408 5.99237 4.01813C3.40007 6.12218 1.6794 9.1122 1.16269 12.4107C0.645981 15.7092 1.36989 19.0822 3.1946 21.8781L2.21279 26.7872L7.12187 25.8054Z" stroke="#1C1B1F" stroke-width="1.74545" stroke-linecap="round" stroke-linejoin="round"/>                        
+                </svg>
+            </div>
+            <div id="instagram-icon">
+                <!-- <img src="assets/images/instagram-icon.png" alt="Footer"  class="instagram-icon"/> -->
+                 <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M21.25 1H7.75C4.02208 1 1 4.02208 1 7.75V21.25C1 24.9779 4.02208 28 7.75 28H21.25C24.9779 28 28 24.9779 28 21.25V7.75C28 4.02208 24.9779 1 21.25 1Z" stroke="#1C1B1F" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21.9248 7.0752H21.9383M19.8998 13.6497C20.0664 14.7732 19.8745 15.9207 19.3514 16.9289C18.8283 17.937 18.0005 18.7546 16.986 19.2653C15.9714 19.7759 14.8217 19.9537 13.7003 19.7732C12.5789 19.5928 11.543 19.0633 10.7398 18.2602C9.93669 17.457 9.40724 16.4211 9.22679 15.2997C9.04634 14.1783 9.22409 13.0286 9.73474 12.014C10.2454 10.9994 11.063 10.1717 12.0711 9.64862C13.0793 9.1255 14.2268 8.93359 15.3503 9.1002C16.4963 9.27014 17.5573 9.80417 18.3766 10.6234C19.1958 11.4426 19.7299 12.5036 19.8998 13.6497Z" stroke="#1C1B1F" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+            </div>
+
         </div>
 
     </footer>
