add complete footer and adjustments in contact form

--- a/index.html
+++ b/index.html
@@ -433,26 +433,25 @@ Codebeamer (application lifecycle management)</p>
         </div>
     </div>
 
+    <div id ="spacer">
+        <svg width="1278" height="1" viewBox="0 0 1278 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <line x1="4.37114e-08" y1="0.5" x2="1278" y2="0.500112" stroke="#D9D9D9"/>
+        </svg>
+    </div>
 
     <footer id="footer">
-        <!-- /* Space line in between */ -->
-        <div id ="spacer">
-            <svg width="1278" height="1" viewBox="0 0 1278 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <line x1="4.37114e-08" y1="0.5" x2="1278" y2="0.500112" stroke="#D9D9D9"/>
-            </svg>
-        </div>
-
         <div id="footer-text">
-            <p>© 2025 Andre Maier,</p>
-            <p>designed by Yelyzaveta Khoroshun</p>
+            <p>© 2025 Andre Maier,
+            designed</p>
+            <p>by Yelyzaveta Khoroshun</p>
         </div>
 
         <div id="footer-links">
-            Ausbildung
-            Praktische Erfahrung
-            Projects
-            Relevante Module
-            Andere
+            <a href="#education">Ausbildung</a>
+            <a href="#projects">Projecte</a>
+            <a href="#work-experience">Praktische Erfahrung</a>
+            <a href="#study">Studium</a>
+            <a href="#others">Andere</a>
         </div>
 
         <div id="footer-icons">
