add styles and functions tnav bar

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                         </svg>
                     </div>
                 </div>
-                <div class="nav-text-left"><span >Andre Maier</span></div>
-                <div class="nav-section-title" id="current-section">/About</div>
+            <div class="nav-text-left">
+            <a href="#hero" id="nav-name-link" class="nav-name-link">Andre Maier</a>
+            </div>
+            <div class="nav-section-title" id="current-section">/About</div>
             </div>
             <nav class="nav-center">
                 <a href="#education" class="nav-link">Ausbildung</a>
@@ -33,13 +35,16 @@
                 <a href="#study" class="nav-link">Studium</a>
                 <a href="#others" class="nav-link">Andere</a>
                 <div class="nav-right">
-                    <img src="assets/images/icon.svg" class="talk-icon" />
+                    <a href="#contact" id="contact-link">
+                        <img src="assets/images/icon.svg" class="talk-icon" alt="Kontakt-Icon" />
+                    </a>
                 </div>
+
             </nav>
         </div>
     </header>
 
-    <div id="content">
+    <main id="content">
         <section id="hero">
             <div id="status-title">
                 <div id="status">
@@ -471,7 +476,7 @@ Codebeamer (application lifecycle management)</p>
 
             </div>
 
-        </div>
+        </main>
 
     </footer>
 
