change: add projekte anschauen button to work tile experiences in html structure

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 
         <section id="work-experience">
             <div id="work-experience-list">
+
                 <div class="work-tile">
                     <p id="work-name">Software Developer at Contag AG</p>
                         <div class="work-tile-line">
@@ -194,6 +195,9 @@
                             <p id="work-date-presentation">Dec. 2023 - Present</p>
                         </div>
                         <p id="work-responsibilites">Developing and maintaining software applications and infrastructure, collaborating with cross-functional teams, and ensuring code quality.</p>
+                        <div class="work-experience-button">
+                            <button>Projekte anschauen</button>
+                        </div>
                 </div>
 
                 <div class="work-tile">
